--- a/shellcodingtips.html
+++ b/shellcodingtips.html
@@ -3,7 +3,7 @@
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">   
-        <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
     <title>Shellcoding Tips for Modern Linux</title>
